change option for 'FAUP'

--- a/ay24-25/index.html
+++ b/ay24-25/index.html
@@ -58,9 +58,7 @@
                 <option>2nd Year</option>
                 <option>3rd Year</option>
                 <option>4th Year</option>
-                <option>5th Year</option>
-                <option>6th Year</option>
-                <option>7th Year</option>
+                <option>FAUP</option>
                 <option>Alum</option>
             </select>
             <br/>
