add status components

--- a/ay24-25/index.html
+++ b/ay24-25/index.html
@@ -44,6 +44,10 @@
                 <button name="download_dp" class="primary">
                     <i class="fa-solid fa-file-arrow-down"></i>
                     Download</button>
+                <div class="status download">
+                    <i class="fa-regular fa-circle-check"></i>
+                    Downloaded!</div>
+                
 
             </div>
         </section>
@@ -67,6 +71,9 @@
             <button name="copy_caption" class="primary">
                 <i class="fa-regular fa-copy"></i>
                 Copy Caption</button>
+            <span class="status copy">
+                <i class="fa-regular fa-circle-check"></i>
+                Copied!</span>
         </section>
     </main>
     
